# stuff-it

./: Cargo.toml  README.md
benches/: cobs_performance.rs  encode_performance.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs
src/: cobs.rs  lib.rs
