[package]
name = "stuff-it"
version = "0.1.0"
authors = ["AJ Frantz <aj@ajfrantz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
proptest = "0.9"

[[bench]]
name = "cobs_performance"
harness = false
